[gd_scene load_steps=23 format=2]

[ext_resource path="res://Charecters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Charecters/BaseSpriteBounce.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/ChargeBarOver.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/ChargeBarUnder.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/ChargeBarProgress.png" type="Texture" id=5]
[ext_resource path="res://Assets/GuyGood/Shadow.png" type="Texture" id=6]
[ext_resource path="res://Assets/SFX/BarIncrease.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/player/weapons/Rocket Launcher.png" type="Texture" id=8]
[ext_resource path="res://Assets/SFX/BarDecrease.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/BarFail.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/BarGood.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/BarBad.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/BarPerfect.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/player/Head.png" type="Texture" id=14]
[ext_resource path="res://Assets/player/Torso.png" type="Texture" id=15]
[ext_resource path="res://Assets/player/Eye.png" type="Texture" id=16]

[sub_resource type="CircleShape2D" id=1]
radius = 3.24504

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPoints/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPoints/Torso:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPoints/Torso:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPoints/Torso:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 0 ), Vector2( -2.5, 0 ), Vector2( 5, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 282, 16 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]
position = Vector2( 0, -4 )

[node name="BodyPoints" type="Node2D" parent="Body"]

[node name="Torso" type="Position2D" parent="Body/BodyPoints"]

[node name="Torso" type="Sprite" parent="Body/BodyPoints/Torso"]
texture = ExtResource( 15 )

[node name="Head" type="Position2D" parent="Body/BodyPoints/Torso"]
position = Vector2( 0, -10 )

[node name="LeftEye" type="Position2D" parent="Body/BodyPoints/Torso/Head"]
position = Vector2( -1.91007, -1.69178 )

[node name="RightEye" type="Position2D" parent="Body/BodyPoints/Torso/Head"]
position = Vector2( 1.96465, 0.163721 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/Idle = SubResource( 2 )
anims/Run = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="Body"]

[node name="SpringySprites" type="Node2D" parent="Body"]

[node name="Head" parent="Body/SpringySprites" instance=ExtResource( 2 )]
position = Vector2( 0, -10 )
texture = ExtResource( 14 )
stiffness = 4.0
damping = 0.6
target_node_path = NodePath("../../BodyPoints/Torso/Head")

[node name="LeftEye" parent="Body/SpringySprites" instance=ExtResource( 2 )]
position = Vector2( -1.91007, -11.6918 )
texture = ExtResource( 16 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../BodyPoints/Torso/Head/LeftEye")

[node name="RightEye" parent="Body/SpringySprites" instance=ExtResource( 2 )]
position = Vector2( 1.96465, -9.83628 )
texture = ExtResource( 16 )
stiffness = 3.0
damping = 0.6
target_node_path = NodePath("../../BodyPoints/Torso/Head/RightEye")

[node name="Collisions" type="Node2D" parent="Body"]

[node name="Shadow" type="Sprite" parent="Body"]
show_behind_parent = true
position = Vector2( 0, 4 )
texture = ExtResource( 6 )

[node name="Attack" type="Node2D" parent="."]

[node name="AttackCharge" type="TextureProgress" parent="Attack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -29.0
margin_right = 76.0
margin_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
step = 0.01
texture_under = ExtResource( 4 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 5 )
fill_mode = 6
tint_under = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="Attack"]
one_shot = true

[node name="Weapons" type="Node2D" parent="Attack"]

[node name="RocketLauncher" type="Sprite" parent="Attack/Weapons"]
position = Vector2( 0, -5 )
texture = ExtResource( 8 )
offset = Vector2( 5, 0 )

[node name="RocketPosition" type="Position2D" parent="Attack/Weapons/RocketLauncher"]
position = Vector2( 8, 0 )

[node name="RocketLauncherAnim" type="AnimationPlayer" parent="Attack/Weapons/RocketLauncher"]
anims/Shoot = SubResource( 4 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 0, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -5 )
shape = SubResource( 5 )

[node name="Sounds" type="Node2D" parent="."]

[node name="BarIncrease" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="BarDecrease" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="BarPerfect" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )

[node name="BarGood" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="BarBad" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="BarFail" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[node name="BossBarHide" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossBarHide"]
position = Vector2( 0, -96 )
shape = SubResource( 6 )
